z-index fixes

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,7 +62,7 @@ html {
 .popup {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 6;
     left: 0;
     width: 100%;
     height: 100%;
@@ -367,7 +367,7 @@ select {
     top: 30px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 5;
+    z-index: 6;
     height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
